[Update] 농장 상세 조회, 수정 추가